[package]
name = "jwks-client-update"
version = "0.2.1"
authors = ["Jean-François Bilodeau <jfbilodeau@chronogears.com>"]
edition = "2021"
keywords = ["jwt", "jwks", "jwk", "gcp"]
categories = ["web-programming", "cryptography", "authentication"]
license = "MIT"
homepage = "https://github.com/joao-p-pereira/jwks-client-update.git"
repository = "https://github.com/joao-p-pereira/jwks-client-update.git"
description = "Library to validate JWT tokens using JSON Web Key Set (JWKS)"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.11.0"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ring = "^0.16.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
